src/test/deca/syntax/invalid/parser/black-box/float_big_minus.deca
{
    float a = -3.4028236E+38; /* Non ok, 3.4028235E+38 au max */
}
